# django-htmx-101

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
djblogger/: asgi.py  urls.py  wsgi.py
djblogger/blog/: models.py
djblogger/blog/migrations/: 0001_initial.py
djblogger/settings/: base.py
tests/: conftest.py  factories.py
tests/blog/: test_models.py
